--- a/FinancesLocales.properties
+++ b/FinancesLocales.properties
@@ -1,12 +1,13 @@
 [Version]
 version.appName=Finances locales
-version.number=1.2.1
-version.nom=Yin Yang Kappa
-version.picto=[[File:Finances locales logo.png|20px|alt=Logo de l'outil Finances locales]][[File:Kappa_uc_lc.svg|20px|alt=Lettre grecque Kappa en majuscule et minuscule]]
-version.date=11/8/2015
+version.number=2.4.3
+version.nom=Yin Yang Rhô
+version.picto=[[File:Finances locales logo.png|20px|alt=Logo de l'outil Finances locales]][[File:Rho_uc_lc.svg|20px|alt=Lettre grecque Rho en majuscule et minuscule]]
+version.pictoHTML=<img src="../../licence_logo/finances_locales_logo.png" alt="Logo de l'outil Finances locales" style="width:20px; height:20px; border:none;/><img src="../../licence_logo/200px-Rho_uc_lc.png" alt="Lettre grecque Rho en majuscule et minuscule" style="width:20px; height:20px; border:none;/>
+version.date=20/12/2016
 
 [Env]
-env.pythonVersionReq=3.4
+env.pythonVersionReq=3.x
 
 [Modele]
 modele.nomBaseModele=modele
@@ -23,6 +24,7 @@ extraction.discussion=Discussion:
 extraction.debutArticleliste=Liste des communes
 extraction.delaiEntre2Requetes=0.5
 extraction.anneeMiniMinFi=2000
+extraction.nbAnneeMinimum=6
 
 [Score]
 score.minimum=6
@@ -42,25 +44,26 @@ poids.Moyenne=2
 poids.Elevee=3
 poids.Maximum=4
 label.avancementsOk=?|ébauche|BD|B|A|BA|AdQ
-label.importancesOk=?|faible|moyenne|élevée|maximum
+label.importancesOk=?|faible|Faible|moyenne|Moyenne|élevée|maximum
 nom.importanceCDF=Communes de France
 nom.avancement=avancement
 nom.importanceVDM=Villes du monde
 nom.popularite=Les plus consultés
 
 [EntreesSorties]
-io.repertoirewikicode=Resultats_Wikicode
-io.repertoireBase=Resultats_FinancesLocales
 io.repertoireExtractions=Resultats_Extractions
 io.indicateurNomFicBd=bd_minfi
-io.nomModeleNoticeHTML=modele_notice_HTML.html
+io.repertoireBase=Departement
+io.repertoireListeDep=Listes_villes_par_departement
+io.nomFicListeVille=Villes_département
+io.nomModeleIndexHTML=modele_index_ville_HTML.html
 io.nomModeleCodeHTML=modele_code_HTML.html
-io.nomFicNoticeHTML=A_LIRE_EN_PREMIER.html
+io.nomFicIndexHTML=index.html
 io.RepSrcFicAux=licence_logo
 io.repTransfertWeb=/Users/thierry/Sites/site_tm/Finances_Locales_Web
-io.srepPaquets=paquets
 io.nomModeleNoticeDeploiement=modele_Finances_Locales.html
 io.nomNoticeDeploiement=Finances_Locales.html
+io.nomNoticeTermes=notice.html
 
 [Tableaux]
 tableaux.nbMaxTableaux=6
@@ -86,23 +89,29 @@ tableaux.couleurTaxeFonciereNonBati=#d9ffd9
 
 [Picto]
 picto.ecartNul=Button-White.svg
+pictoHtml.ecartNul=../../licence_logo/10px-Button-White.png
 picto.ecartNulAlt=Picto disque blanc : écart nul
 picto.ecartFort=Button-Blue.svg
+pictoHtml.ecartFort=../../licence_logo/10px-Button-Blue.png
 picto.ecartFortAlt=Picto disque bleu : écart fort
 picto.ecartMoyen=Map-circle-grey.svg
+pictoHtml.ecartMoyen=../../licence_logo/Map-circle-grey.png
 picto.ecartMoyenAlt=Picto cercle bleu : écart moyen
 
-[GenWIkiCode]
+[GenCode]
 gen.siteAlize2=http://www.collectivites-locales.gouv.fr/comptes-des-communes-et-des-groupements-a-fiscalite-propre-donnees-individuelles-millesimes-2000-a
 gen.prefixeCategorieArticle=Finances des communes du département
 gen.prefixePagedetail=Finances de la commune
+gen.idFicHTML=page_HTML
 gen.idFicSection=section
-gen.idFicDetail=detail
+gen.idFicDetail=wikicode
 gen.seuilEcreteRatio=50
 gen.seuilBigRatio=15
 gen.seuilLowRatio=4
 gen.seuilValeurPourCentDifferente=10
 gen.seuilValeurPourCentgrande=30
+
+[GenWIkiCode]
 gen.nbLignesTableauxEuros=4
 gen.nbLignesTableauxTaux=6
 gen.nbLignesTableauxPictoNonComplet=2
@@ -133,10 +142,10 @@ graph.altRougeFonce=Point rouge
 math.procheZero=1e-3
 
 [Test]
-test.numDepvilleExtraction=46
+test.numDepvilleExtraction=101
 test.villeExtraction=Issendolus
-test.villeTailleResu=61599
+test.villeTailleResu=66000
 test.villeTailleTolerance=0.05
-test.numDepDepartementExtraction=104
-test.departementExtraction=Liste des communes de La Réunion
-test.nbFicDepartementExtraction=6
+test.numDepDepartementExtraction=101
+test.departementExtraction=Liste des communes de la Guadeloupe
+test.nbFicDepartementExtraction=10
