--- a/FinancesLocales.properties
+++ b/FinancesLocales.properties
@@ -1,10 +1,10 @@
 [Version]
 version.appName=Finances locales
-version.number=2.4.3
-version.nom=Yin Yang Rhô
-version.picto=[[File:Finances locales logo.png|20px|alt=Logo de l'outil Finances locales]][[File:Rho_uc_lc.svg|20px|alt=Lettre grecque Rho en majuscule et minuscule]]
-version.pictoHTML=<img src="../../licence_logo/finances_locales_logo.png" alt="Logo de l'outil Finances locales" style="width:20px; height:20px; border:none;/><img src="../../licence_logo/200px-Rho_uc_lc.png" alt="Lettre grecque Rho en majuscule et minuscule" style="width:20px; height:20px; border:none;/>
-version.date=20/12/2016
+version.number=3.0.0
+version.nom=Yin Yang Sigma
+version.picto=[[File:Finances locales logo.png|20px|alt=Logo de l'outil Finances locales]][[File:greek_letter_sigma|20px|alt=Lettre grecque Sigma en majuscule et minuscule]]
+version.pictoHTML=<img src="../../licence_logo/finances_locales_logo.png" alt="Logo de l'outil Finances locales" style="width:20px; height:20px; border:none;/><img src="../../licence_logo/greek_letter_sigma.png" alt="Lettre grecque Sigma en majuscule et minuscule" style="width:20px; height:20px; border:none;/>
+version.date=7/8/2019
 
 [Env]
 env.pythonVersionReq=3.x
@@ -14,17 +14,172 @@ modele.nomBaseModele=modele
 modele.type=complet
 
 [Extraction]
-extraction.urlMinFi =http://alize2.finances.gouv.fr/communes/eneuro/tableau.php
-extraction.ficCleFi=cleFi.txt
-extraction.urlMinFiDetail =http://alize2.finances.gouv.fr/communes/eneuro/detail.php
-extraction.ficCleFiDetail=cleFiDetail.txt
-extraction.wikipediafrBaseUrl=https://fr.wikipedia.org/wiki/
-extraction.wikipediafrActionRow=?action=raw
-extraction.discussion=Discussion:
-extraction.debutArticleliste=Liste des communes
+dataGouvFr.Comptes=https://www.data.gouv.fr/fr/datasets/comptes-individuels-des-communes-fichier-global
+dataGouvFr.StartFile=donneesbpse_dobp_
+dataGouvFr.ExtFile=.csv
+dataGouvFr.NbMinFile=18
+dataGouvFr.FileSizeMin=39000000
+dataGouvFr.YearMin=2000
+
+updateDataMinFi.bufferReadingSize=10240
+
+wikipediaFr.baseUrl=https://fr.wikipedia.org/wiki/
+wikipediaFr.actionRow=?action=raw
+wikipediaFr.discussion=Discussion:
+wikipediaFr.debutArticleliste=Liste des communes
+
 extraction.delaiEntre2Requetes=0.5
-extraction.anneeMiniMinFi=2000
 extraction.nbAnneeMinimum=6
+
+database.path=database
+database.name=minfi.db
+
+[cleFi3Valeurs]
+clefi.resultat comptable=res1
+clefi.total des produits de fonctionnement=prod
+clefi.total des charges de fonctionnement=charge
+clefi.total des ressources d'investissement=recinv
+clefi.besoin ou capacité de financement de la section investissement=bf1
+clefi.total des emplois investissement=depinv
+clefi.dont charges de personnel=perso
+clefi.achats et charges externes=achat
+clefi.dont impôts locaux=impo1
+clefi.autres impôts et taxes=impo2
+clefi.dotation globale de fonctionnement=dgf
+clefi.charges financières=fin
+clefi.subventions versées=subv
+clefi.contingents=cont
+clefi.subventions reçues=subr
+clefi.fctva=fctva
+clefi.dont dépenses équipement=equip
+clefi.remboursement emprunts et dettes assimilées=remb
+clefi.dont emprunts bancaires et dettes assimilées=emp
+clefi.taxe habitation (y compris thlv)=pth
+clefi.foncier bâti=pfb
+clefi.foncier non bâti=pfnb
+clefi.capacité autofinancement caf=caf
+clefi.encours de la dette au 31 12 n=dette
+clefi.annuité de la dette=annu
+
+[cleFi2Valeurs]
+cletaxe.taux taxe habitation=tth
+cletaxe.taux taxe foncière bâti=tfb
+cletaxe.taux taxe foncière non bâti=tfnb
+
+[cleFi1Valeur]
+# Les code du département dep et code de la commune à l'intérieur du département
+# réunis forment le code commune qui sert à l'indexation des villes dans la base
+# Ref : https://fr.wikipedia.org/wiki/Code_officiel_g%C3%A9ographique#Code_commune
+clefi.departement=dep
+clefi.codeInsee=icom
+clefi.nomMinFi=inom
+clefi.nomStrate=nomsst2
+clefi.population1_1=pop1
+clefi.typeGroupement=nomsst1
+clefi.annee=an
+
+[départements]
+01=Ain;de l'
+02=Aisne;de l'
+03=Allier;de l'
+04=Alpes-de-Haute-Provence;des
+05=Hautes-Alpe;des
+06=Alpes-Maritimes;des
+07=Ardèche;de l'
+08=Ardennes;des
+09=Ariège;de l'
+10=Aube;de l'
+11=Aude;de l'
+12=Aveyron;de l'
+13=Bouches-du-Rhône;des
+14=Calvados;du
+15=Cantal;du
+16=Charente;de la
+17=Charente-Maritime;de la
+18=Cher;du
+19=Corrèze;de laq
+2A=Corse-du-Sud;de la
+2B=Haute-Corse;de la
+21=Côte-d'Or;de la
+22=Côtes d'Armor;des
+23=Creuse;de la
+24=Dordogne;de la
+25=Doubs;du
+26=Drôme;de la
+27=Eure;de l'
+28=Eure-et-Loir;de l'
+29=Finistère;du
+30=Gard;du
+31=Haute-Garonne;de la
+32=Gers;du
+33=Gironde;de la
+34=Hérault;de l'
+35=Ille-et-Vilaine;de l'
+36=Indre;de l'
+37=Indre-et-Loire;de l'
+38=Isère;de l'
+39=Jura;du
+40=Landes;des
+41=Loir-et-Cher;du
+42=Loire;de la
+43=Haute-Loire;de la
+44=Loire-Atlantique;de la
+45=Loiret;du
+46=Lot;du
+47=Lot-et-Garonne;du
+48=Lozère;de la
+49=Maine-et-Loire;du
+50=Manche;de la
+51=Marne;de la
+52=Haute-Marne;de la
+53=Mayenne;de la
+54=Meurthe-et-Moselle;de la
+55=Meuse;de la
+56=Morbihan;du
+57=Moselle;de la
+58=Nièvre;de la
+59=Nord;du
+60=Oise;de l'
+61=Orne;de l'
+62=Pas-de-Calais;du
+63=Puy-de-Dôme;du
+64=Pyrénées-Atlantiques;des
+65=Hautes-Pyrénées;des
+66=Pyrénées-Orientales;des
+67=Bas-Rhin;du
+68=Haut-Rhin;du
+69=Rhône;du
+70=Haute-Saône;de la
+71=Saône-et-Loire;de la
+72=Sarthe;de la
+73=Savoie;de la
+74=Haute-Savoie;de la
+75=Paris;de
+76=Seine-Maritime;de la
+77=Seine-et-Marne;de la
+78=Yvelines;des
+79=Deux-Sèvres;des
+80=Somme;de la
+81=Tarn;du
+82=Tarn-et-Garonne;du
+83=Var;du
+84=Vaucluse;du
+85=Vendée;du
+86=Vienne;de la
+87=Haute-Vienne;de la
+88=Vosges;des
+89=Yonne;de l'
+90=Territoire de Belfort;du
+91=Essonne;de l'
+92=Hauts-de-Seine;des
+93=Seine-St-Denis;de la
+94=Val-de-Marne;du
+95=Val-D'Oise;du
+101=Guadeloup;de la
+102=Martinique;de la
+103=Guyane;de la
+104=La Réunion;de la
+105=Mayotte;de
 
 [Score]
 score.minimum=6
@@ -51,28 +206,19 @@ nom.importanceVDM=Villes du monde
 nom.popularite=Les plus consultés
 
 [EntreesSorties]
-io.repertoireExtractions=Resultats_Extractions
 io.indicateurNomFicBd=bd_minfi
 io.repertoireBase=Departement
-io.repertoireListeDep=Listes_villes_par_departement
+io.repertoireListeDep=../Listes_villes_par_departement
 io.nomFicListeVille=Villes_département
 io.nomModeleIndexHTML=modele_index_ville_HTML.html
 io.nomModeleCodeHTML=modele_code_HTML.html
 io.nomFicIndexHTML=index.html
 io.RepSrcFicAux=licence_logo
-io.repTransfertWeb=/Users/thierry/Sites/site_tm/Finances_Locales_Web
 io.nomModeleNoticeDeploiement=modele_Finances_Locales.html
 io.nomNoticeDeploiement=Finances_Locales.html
 io.nomNoticeTermes=notice.html
 
 [Tableaux]
-tableaux.nbMaxTableaux=6
-tableaux.nom0=Chiffres clés
-tableaux.nom1=Opérations de Fonctionnement
-tableaux.nom2=Opérations d'investissement
-tableaux.nom3=Elements de Fiscalité
-tableaux.nom4=Autofinancement
-tableaux.nom5=Endettement
 tableaux.couleurSolde=#ffffff
 tableaux.couleurRecettes=#ccfff2
 tableaux.couleurCharges=#ffd9ff
@@ -142,6 +288,28 @@ graph.altRougeFonce=Point rouge
 math.procheZero=1e-3
 
 [Test]
+test.pathCSVDataGouvFrOk=../recup_data_gouv_fr
+test.nbFilesCSVDataGouvFrOk=19
+test.firstFileCSVDataGouvFrOk=donneesbpse_dobp_2000.csv
+test.testDirExtraction=unittest/TestExtraction
+test.testInitBdFromListeDep=unittest/testInitBdFromListeDep
+
+updateDataMinFi.pathCSVMini=unittest/testDatabaseMini
+updateDataMinFi.pathDatabaseMini=unittest/testDatabaseMini/testDatabaseMini.db
+
+genCode.pathCSVMini=unittest/testDatabaseMini4Gen
+genCode.pathDatabaseMini=unittest/testDatabaseMini4Gen/testDatabaseMini.db
+genCode.pathVilles=unittest/repVilles
+genCode.pathOutput=unittest/repGenCodeOutput
+
+genHTMLCodeGraphiques.pathOutputTest = unittest/testGraphiques
+
+database.testDir = unittest/testDatabase
+database.testName = minfi.db
+
+modele.testDir = unittest/testModele
+modele.testName = modele_test.txt
+
 test.numDepvilleExtraction=101
 test.villeExtraction=Issendolus
 test.villeTailleResu=66000
@@ -149,3 +317,9 @@ test.villeTailleTolerance=0.05
 test.numDepDepartementExtraction=101
 test.departementExtraction=Liste des communes de la Guadeloupe
 test.nbFicDepartementExtraction=10
+
+genCodeTableauxPicto.ficModele=unittest/testModele/modele_picto
+io.repertoireBase=unittest/Departement
+
+io.repTransfertWeb= unittest/test_genIndexDepartement
+
