fix problems with unittest : dependancy to environment

--- a/FinancesLocales.properties
+++ b/FinancesLocales.properties
@@ -262,7 +262,7 @@ nom.popularite=Les plus consultés
 [EntreesSorties]
 io.indicateurNomFicBd=bd_minfi
 io.repertoireBase=Departement
-io.nomFicListeVille=Villes_département
+io.nomFicListeVille=Villes_departement
 io.nomModeleIndexHTML=modele_index_ville_HTML.html
 io.nomModeleCodeHTML=modele_code_HTML.html
 io.nomFicIndexHTML=index.html
@@ -344,9 +344,10 @@ graph.altRougeFonce=Point rouge
 math.procheZero=1e-3
 
 [Test]
-test.pathCSVDataGouvFrOk=../recup_data_gouv_fr
-test.nbFilesCSVDataGouvFrOk=19
-test.firstFileCSVDataGouvFrOk=donneesbpse_dobp_2000.csv
+# test.pathCSVDataGouvFrOk=../recup_data_gouv_fr
+test.pathCSVDataGouvFrOk=unittest/recup_data_gouv_fr_test
+test.nbFilesCSVDataGouvFrOk=2
+test.firstFileCSVDataGouvFrOk=donneesbpse_dobp_2019.csv
 test.testDirExtraction=unittest/TestExtraction
 test.testInitBdFromListeDep=unittest/testInitBdFromListeDep
 
@@ -381,6 +382,7 @@ test.villeTailleTolerance=0.05
 test.numDepDepartementExtraction=101
 test.departementExtraction=Liste des communes de la Guadeloupe
 test.nbFicDepartementExtraction=10
+test.scoreMax=40
 
 genCodeTableauxPicto.ficModele=unittest/testModele/modele_picto
 io.repertoireBase=unittest/Departement
