--- a/FinancesLocales.properties
+++ b/FinancesLocales.properties
@@ -1,10 +1,10 @@
 [Version]
 version.appName=Finances locales
-version.number=4.0.1
+version.number=4.0.3
 version.nom=Yin Yang Tau
 version.picto=[[File:Finances locales logo.png|20px|alt=Logo de l'outil Finances locales]][[File:Greek tau.png|20px|alt=Lettre grecque Tau en majuscule et minuscule]]
 version.pictoHTML=<img src="../../licence_logo/finances_locales_logo.png" alt="Logo de l'outil Finances locales" style="width:20px; height:20px; border:none;/><img src="../../licence_logo/greek_letter_tau.png" alt="Lettre grecque Tau en majuscule et minuscule" style="width:20px; height:20px; border:none;/>
-version.date=4/7/2020
+version.date=8/12/2021
 
 [Env]
 env.pythonVersionReq=3.x
@@ -359,7 +359,10 @@ updateDataMinFiGroupement.pathDatabaseMini=unittest/testDatabaseMiniGroupement/t
 
 genCode.pathCSVMini=unittest/testDatabaseMini4Gen
 genCode.pathDatabaseMini=unittest/testDatabaseMini4Gen/testDatabaseMini.db
+genCode.pathCSVMini55=unittest/testDatabaseMini4Gen55
+genCode.pathDatabaseMini55=unittest/testDatabaseMini4Gen55/testDatabaseMini.db
 genCode.pathVilles=unittest/repVilles
+genCode.pathVilles55=unittest/repVilles55
 genCode.pathOutput=unittest/repGenCodeOutput
 genCode.resultatsPath=unittest/createResultDir
 
