--- a/FinancesLocales.properties
+++ b/FinancesLocales.properties
@@ -1,10 +1,10 @@
 [Version]
 version.appName=Finances locales
-version.number=4.0.3
+version.number=4.0.4
 version.nom=Yin Yang Tau
 version.picto=[[File:Finances locales logo.png|20px|alt=Logo de l'outil Finances locales]][[File:Greek tau.png|20px|alt=Lettre grecque Tau en majuscule et minuscule]]
 version.pictoHTML=<img src="../../licence_logo/finances_locales_logo.png" alt="Logo de l'outil Finances locales" style="width:20px; height:20px; border:none;/><img src="../../licence_logo/greek_letter_tau.png" alt="Lettre grecque Tau en majuscule et minuscule" style="width:20px; height:20px; border:none;/>
-version.date=9/12/2021
+version.date=28/12/2021
 
 [Env]
 env.pythonVersionReq=3.x
@@ -15,6 +15,7 @@ modele.type=complet
 
 [Extraction]
 dataGouvFr.Comptes=https://www.data.gouv.fr/fr/datasets/comptes-individuels-des-communes-fichier-global
+dataGouvFr.ComptesGroupements=https://www.data.gouv.fr/fr/datasets/comptes-individuels-des-groupements-a-fiscalite-propre-fichier-global-a-compter-de-2007
 dataGouvFr.StartFile=donneesbpse_dobp_
 dataGouvFr.ExtFile=.csv
 dataGouvFr.NbMinFile=18
@@ -301,7 +302,7 @@ pictoHtml.ecartMoyen=../../licence_logo/Map-circle-grey.png
 picto.ecartMoyenAlt=Picto cercle bleu : écart moyen
 
 [GenCode]
-gen.siteAlize2=http://www.collectivites-locales.gouv.fr/comptes-des-communes-et-des-groupements-a-fiscalite-propre-donnees-individuelles-millesimes-2000-a
+gen.siteAlize2=https://www.data.gouv.fr/fr/datasets/comptes-individuels-des-communes-fichier-global
 gen.prefixeCategorieArticle=Finances des communes du département
 gen.prefixePagedetail=Finances de la commune
 gen.idFicHTML=page_HTML
