--- a/FinancesLocales.properties
+++ b/FinancesLocales.properties
@@ -1,10 +1,10 @@
 [Version]
 version.appName=Finances locales
-version.number=4.0.4
+version.number=4.1.0
 version.nom=Yin Yang Tau
 version.picto=[[File:Finances locales logo.png|20px|alt=Logo de l'outil Finances locales]][[File:Greek tau.png|20px|alt=Lettre grecque Tau en majuscule et minuscule]]
 version.pictoHTML=<img src="../../licence_logo/finances_locales_logo.png" alt="Logo de l'outil Finances locales" style="width:20px; height:20px; border:none;/><img src="../../licence_logo/greek_letter_tau.png" alt="Lettre grecque Tau en majuscule et minuscule" style="width:20px; height:20px; border:none;/>
-version.date=28/12/2021
+version.date=31/12/2021
 
 [Env]
 env.pythonVersionReq=3.x
@@ -14,7 +14,8 @@ modele.nomBaseModele=modele
 modele.type=complet
 
 [Extraction]
-dataGouvFr.Comptes=https://www.data.gouv.fr/fr/datasets/comptes-individuels-des-communes-fichier-global
+dataGouvFr.Comptes=https://www.data.gouv.fr
+dataGouvFr.ComptesVilles=https://www.data.gouv.fr/fr/datasets/comptes-individuels-des-communes-fichier-global
 dataGouvFr.ComptesGroupements=https://www.data.gouv.fr/fr/datasets/comptes-individuels-des-groupements-a-fiscalite-propre-fichier-global-a-compter-de-2007
 dataGouvFr.StartFile=donneesbpse_dobp_
 dataGouvFr.ExtFile=.csv
@@ -313,6 +314,9 @@ gen.seuilBigRatio=15
 gen.seuilLowRatio=4
 gen.seuilValeurPourCentDifferente=10
 gen.seuilValeurPourCentgrande=30
+
+[GenCodeGroupement]
+gen.prefixeCategorieArticle=Finances des groupements de la région
 
 [GenWIkiCode]
 gen.nbLignesTableauxEuros=4
